# mlflow-retrain-app

./: .env.template  .gitignore  docker-compose.yml
app/: __init__.py
backend/: pyproject.toml  requirements.txt
backend/app/core/: __init__.py
backend/app/core/scripts/: MNIST.py
backend/app/core/views/: MNIST.py  __init__.py
mnist_service/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
mnist_service/app/: __init__.py  config.py
mnist_service/app/core/: __init__.py
mnist_service/app/core/models/: __init__.py  pipeline.py  result.py  step.py  utils.py  version.py
mnist_service/app/core/schemas/: pipeline.py  result.py  step.py  version.py
mnist_service/app/core/scripts/: MNIST.py
mnist_service/app/core/views/: __init__.py  hello_world.py  model.py  pipeline.py  result.py  step.py  version.py
static/mlruns/0/: meta.yaml
static/mlruns/1/: meta.yaml
static/mlruns/1/bc537fe444f4491d863c0c6bca6e3b61/: meta.yaml
static/mlruns/1/bc537fe444f4491d863c0c6bca6e3b61/artifacts/model/: MLmodel  conda.yaml  python_env.yaml  requirements.txt
static/mlruns/1/bc537fe444f4491d863c0c6bca6e3b61/artifacts/model/data/: model.pth
static/mlruns/1/bc537fe444f4491d863c0c6bca6e3b61/metrics/: Accuracy  Loss
static/mlruns/1/bc537fe444f4491d863c0c6bca6e3b61/tags/: mlflow.log-model.history  mlflow.source.name
