[tool.poetry]
name = "mlops_example"
version = "0.1.0"
description = ""
authors = ["Pedro Yves"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
torch = "^1.11.0"
numpy = "^1.22.3"
scikit-learn = "^1.1.0"
pandas = "^1.4.2"
mlflow = "^1.26.0"
Flask-Cors = "^3.0.10"
Flask-RESTful = "^0.3.9"
torchvision = "^0.12.0"
Flask-Migrate = "^3.1.0"
flask-restx = "^0.5.1"
Flask-SQLAlchemy = "^2.5.1"
psycopg2-binary = "^2.9.3"
flask-marshmallow = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
